Fix box overlapping the dev links

--- a/css/pages/development.styl
+++ b/css/pages/development.styl
@@ -42,6 +42,8 @@
 
 #ScriptPic {
   relative: top 0px left 380px
+  // Fix overlap with sidebar.
+  width: 300px
 }
 
 #ScriptText {
